group 'fxapp'
version '1.1'

apply plugin: 'java'

sourceCompatibility = 1.8

task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Gradle Jar File Example',
                'Implementation-Version': version,
                'Main-Class': 'Main.Main'
    }
    baseName = project.name
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
    tasks.withType(JavaForkOptions) {
        jvmArgs '-Xmx2048m', '-XX:MaxPermSize=512m', '-XX:-UseGCOverheadLimit', '-XX:+CMSClassUnloadingEnabled'
    }
}
repositories {
    mavenCentral()
}


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
